--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=ToDo
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#Baza danych MySQL
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/todo_database?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/todo_database?useSSL=false&serverTimezone=UTC
+
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
