Running the database as a container

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-spring.application.name=ToDo
-#Baza danych MySQL
-spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/todo_database?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/todo_database?useSSL=false&serverTimezone=UTC
-
+# Baza danych MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_database?allowPublicKeyRetrieval=true
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
 
