--- a/compose.yaml
+++ b/compose.yaml
@@ -4,9 +4,11 @@ services:
   mysql:
     image: mysql:latest
     container_name: mysql-db
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_DATABASE: todo_database
       MYSQL_USER: user
+      MYSQL_PASSWORD: password
     ports:
       - "3306:3306"
